--- a/jquery-selectable/index.html
+++ b/jquery-selectable/index.html
@@ -13,7 +13,7 @@
 		background: #FECA40; 
 	}
 	#selectable .ui-selected { 
-		background: #F39814; 
+		background: #27db24; 
 		color: white; 
 	}
 	#selectable { 
@@ -63,6 +63,16 @@
 	<li class="ui-state-default">18</li>
 	<li class="ui-state-default">19</li>
 	<li class="ui-state-default">20</li>	
+	<li class="ui-state-default">21</li>
+	<li class="ui-state-default">22</li>
+	<li class="ui-state-default">23</li>
+	<li class="ui-state-default">24</li>
+	<li class="ui-state-default">25</li>
+	<li class="ui-state-default">26</li>
+	<li class="ui-state-default">27</li>
+	<li class="ui-state-default">28</li>
+	<li class="ui-state-default">29</li>
+	<li class="ui-state-default">30</li>	
 </ol>
 
 
